# pwjrtos

./: CMakeLists.txt  Kconfig  LICENSE  README.md  README.rst  prj.conf  sample.yaml
boards/: nucleo_f767zi.conf  nucleo_f767zi.overlay
src/: main.c  sd.c  sd.h
tools/: bin2data.py
